# ScalableSilhouetteComputation

./: .TODO.md.swp  .gitignore  CMakeLists.txt  License.txt  README.md  TODO.md  image.def  pyproject.toml  slurm_launcher.slurm
.github/workflows/: ci.yml  release.yml
cppCode/: .gitignore  Makefile  bindings.cpp  driver.py  environment.yml  image.def  main.cpp  quickstart.py
cppCode/data/: parseData.py
cppCode/import/nlohmann/: json.hpp
cppCode/libs/: algorithms.cpp  algorithms.h  structures-new.h  structures.cpp  structures.h
examples/: quickstart.py
research/: clustData.py  driver.py  environment.yml
research/data/: links.txt
src/silhouette_approx/: __init__.py
src/silhouette_scalable/: __init__.py
tests/: conftest.py  test_compute.py
